# conventional-pre-commit

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  README.md  compose.yml  conventional-pre-commit.sh  data.json  endpoint.json  pyproject.toml  setup.cfg  tests.sh
.devcontainer/: Dockerfile  compose.yml  devcontainer.json  requirements.txt
.github/: dependabot.yaml
.github/workflows/: github-stats.yml  pre-commit.yaml  publish.yml  release.yml  tests.yml
.github/workflows/github-stats/: index.js  package-lock.json  package.json
conventional_pre_commit/: __init__.py  format.py  hook.py  output.py
htmlcov/: class_index.html  d_c34a85571d08a56f___init___py.html  d_c34a85571d08a56f_format_py.html  d_c34a85571d08a56f_hook_py.html  function_index.html  index.html  status.json  z_c34a85571d08a56f___init___py.html  z_c34a85571d08a56f_format_py.html  z_c34a85571d08a56f_hook_py.html  z_c34a85571d08a56f_output_py.html
tests/: conftest.py  run.sh  test_format.py  test_hook.py  test_output.py
tests/messages/: bad_commit  conventional_commit  conventional_commit_bad_multi_line  conventional_commit_bad_subject_length  conventional_commit_gbk  conventional_commit_multi_line  conventional_commit_subject_length  conventional_commit_utf-8  conventional_commit_with_dots  conventional_commit_with_multiple_scopes  conventional_commit_with_scope  custom_commit  fixup_commit  interactive_rebase_commit  merge_commit
