[project]
name = "conventional_pre_commit"
version = "2.2.0"
description = "A pre-commit hook that checks commit messages for Conventional Commits formatting."
readme = "README.md"
license = { file = "LICENSE" }
classifiers = ["Programming Language :: Python :: 3 :: Only"]
keywords = ["git", "pre-commit", "conventional-commits"]
authors = [
    { name = "Compiler LLC", email = "dev@compiler.la" }
]
requires-python = ">=3.7"
dependencies = []

[project.urls]
code = "https://github.com/compilerla/conventional-pre-commit"
tracker = "https://github.com/compilerla/conventional-pre-commit/issues"

[project.optional-dependencies]
dev = [
    "black",
    "build",
    "flake8",
    "pre-commit",
    "pytest",
    "pytest-cov"
]

[project.scripts]
conventional-pre-commit = "conventional_pre_commit.hook:main"

[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 127
target-version = ['py311']
include = '\.pyi?$'

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = [
    "*.egg-info",
    ".git",
    ".pytest_cache",
    ".vscode",
]
