[metadata]
name = conventional_pre_commit
version = 2.0.0
description = A pre-commit hook that checks commit messages for Conventional Commits formatting.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/compilerla/conventional-pre-commit
author = Compiler LLC
author_email = dev@compiler.la
license = Apache 2.0
license_file = LICENSE
classifiers =
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3

[options]
packages = find:
python_requires = >=3.7

[options.entry_points]
console_scripts =
    conventional-pre-commit = conventional_pre_commit.hook:main

[options.packages.find]
exclude =
    tests*
